Update text on home page, fix side-nav-bar image to align with top of header

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -95,8 +95,8 @@
 }
 
 .app-info > section > p {
-  padding-left: 25%;
-  padding-right: 25%;
+  padding-left: 15%;
+  padding-right: 15%;
   text-align: center;
 }
 
