--- a/app/assets/stylesheets/api/items.scss
+++ b/app/assets/stylesheets/api/items.scss
@@ -10,7 +10,7 @@
 
 .side-nav-img {
   position: absolute;
-  top: 67px;
+  top: 68px;
   left: 0;
   min-width: 160px;
   max-width: 160px;
